Add media folder, modified templates

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load static %}
+<div class="container">
+        <div class="footer-bottom float-left">
+            <div class="border-top1">
+                <div class="border-top2">
+                <div class="container">
+                    <div class="float-left">
+                        <a class="logo-footer" href="/" title="Logo"><img src="{% static "images/logonew.png" %}" alt="logo"></a>
+                        <p>Copyright &copy;2020 by <a href="#" title="title">Cebusite</a>. Proudly powered by <a href="#" title="title">Cebusite</a></p>
+                    </div>
+                    <div class="float-right align-right">
+                        <ul class="menu-footer">
+                            <li><a href="#" title="Term">Term</a></li>
+                            <li><a href="#" title="Privacy">Privacy</a></li>
+                            <li><a href="#" title="Brand">Brand</a></li>
+                            <li><a href="#" title="About">About</a></li>
+                            <li><a href="#" title="Contact">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                </div>
+                <!-- End border -->
+            </div>
+            <!-- End container -->
+        </div>
+</div>
