--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,24 +1,19 @@
 {% extends "base.html" %}
-{% load crispy_forms_filters %}
 
 {% block content %}
-
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
+<div class="page-login">
 <h1>Login</h1>
 
 {% if next %}
   <p>Please login to see this page.</p>
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
+<form class="login-form" method="post" action="{% url 'login' %}">
   {% csrf_token %}
-  {{ form|crispy }}
+  {{ form }}
 
-  <input type="submit" value="Login" class="btn btn-primary" />
+  <input type="submit" value="Login" class="button" />
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
-
+</div>
 {% endblock %}
