--- a/templates/portal/news_confirm_delete.html
+++ b/templates/portal/news_confirm_delete.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+  {% if request.user.is_authenticated %}
+    <div class="confirm-delete">
+      <h1>Delete news?</h1>
+        <form action="" method="post">
+          {% csrf_token %}
+          <input type="submit" value="Yes" class="btn btn-danger">
+        </form>
+      <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-success">
+        No
+      </a>
+    </div>
+  {% endif %}
+{% endblock %}
