--- a/templates/portal/news_form.html
+++ b/templates/portal/news_form.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+  <div class="page-login">
+  <h1>{{ object|yesno:"Update,Create" }} News</h1>
+  <form class="login-form" action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit" class="button">
+  </form>
+  </div>
+{% endblock %}
