--- a/templates/portal/news_detail.html
+++ b/templates/portal/news_detail.html
@@ -60,7 +60,7 @@
                           </div>
                           {% if request.user.id is comment.user.id %}
                             <a style="color: red"
-                              href="{% url 'portal:comment-remove' pk=comment.id %}?news_id={news.id}">
+                              href="{% url 'portal:comment-remove' pk=comment.id %}">
                               Delete
                             </a>
                           {% endif %}
