--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -16,10 +16,10 @@
                 <img class="img-circle img-user" src="{{ request.user.image.url }}" alt="images">
                 <h3>Current User :</h3>
                 <p>{{ request.user.username }}</p>
-                <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-primary">
+                <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-success">
                 User panel
                 </a>
-                <a href="{% url "logout" %}" class="btn btn-success">
+                <a href="{% url "logout" %}" class="btn btn-primary">
                 logout
                 </a>
               {% else %}
