--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -19,9 +19,9 @@
                 <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-success">
                 User panel
                 </a>
-                <a href="{% url "logout" %}" class="btn btn-primary">
+                <bu href="{% url "logout" %}" class="btn btn-primary">
                 logout
-                </a>
+                </bu>
               {% else %}
                 <a href="{% url "login" %}" class="btn btn-primary link-to-page">login</a>
               {% endif %}
