--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -28,6 +28,15 @@
             </div>
         <!-- End container -->
     </div>
+    <div class="header-top">
+            <div class="container">
+            <div class="box float-left">
+                <div class="logo"><a href="/" title="Uno">
+                <img src="{% static "images/logonew.png" %}" alt="Cebu-site-Logo">
+                </a></div>
+            </div>
+            <!-- End container -->
+        </div>
         <!-- End header-top -->
 
 </header>
