Update header styles

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -26,14 +26,26 @@
                 <a href="{% url "login" %}" class="btn btn-primary link-to-page">login</a>
               {% endif %}
             </div>
+            <div class="float-right">
+
+        </div>
         <!-- End container -->
     </div>
     <div class="header-top">
             <div class="container">
             <div class="box float-left">
+
                 <div class="logo"><a href="/" title="Uno">
                 <img src="{% static "images/logonew.png" %}" alt="Cebu-site-Logo">
                 </a></div>
+                <div class="logo-mobile"><a href="#" title="Xanadu"><img src="{% static 'images/logonew.png' %}" alt="Cebu-site-Logo"></a></div>
+    <div class="box-right social-mobile">
+
+                    <div class="search dropdown" data-toggle="modal" data-target=".bs-example-modal-lg" style="display:none;">
+                        <i class="icon"></i>
+                    </div>
+                </div>
+            </div>
             </div>
             <!-- End container -->
         </div>
