Update header styles logo

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -29,6 +29,7 @@
             <div class="float-right">
 
         </div>
+        </div>
         <!-- End container -->
     </div>
     <div class="header-top">
