--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,95 +1,5 @@
 @charset "UTF-8";
-/**
-	Theme Name: FutureLife
-	Theme URI: http://engotheme.com/
-	Author: Engo Team
-	Author URI: http://engotheme.com/
-	Description: Engo ABC HTML Template
-	Version: 1.0
-	Last change:	2016/02/20 [Initial Release]
-	License: GNU General Public License v2 or later
-	Tags: two-columns, left-sidebar, fixed-layout, responsive-layout
-	Text Domain: Engotheme
- **/
-/*------------------------------------------------------------------
-[Table of contents]
 
-	1. Import vendor
-		1.1. Vendor
-			1.1.1. Google fonts
-			1.1.2. Icon Fonts
-			1.1.3. Vendor library
-		1.2. Bootstrap
-	2. Reset
-		2.1. Reset
-		2.2. Default base
-			2.2.1.	Button
-			2.2.2.	Link
-			2.2.3.	Typo
-			2.2.4.	Heading
-			...
-	3. Mixins
-	4. Elements
-		4.1. Our new
-		4.2. News letter
-		4.3. Form our
-		4.4. Brand
-		...
-	5. Ecommerce
-		5.1. Shop General
-		5.2. Item view templates
-		5.3. Shop Widget
-		5.4. Shop view Pages
-		5.5. Shop Single
-		5.6. Shop Cart
-		5.7. Shop Checkout
-		5.8. Shop Wishlist
-		5.9. Track Order
-	6. Templates Layout
-		6.1. General
-		6.2. Header
-			6.2.1. General
-			6.2.2. Header version 1
-			6.2.3. Header version 2
-			6.2.4. Header version 3
-			...
-		6.3. Sidebar
-		6.4. Contents
-			6.4.1. CMS default
-			6.4.2. Blog
-			...
-		6.5. Footers
-			6.5.1. General
-			6.5.2. Footer Version 1
-			6.5.3. Footer Version 2
-			...
-		6.6. Home pages
-			6.6.1. Home page 1
-			6.6.2. Home page 2
-			...
-		6.7. Pages
-			6.7.1. About Us
-				6.7.1.1. About Us Version 1
-				6.7.1.2. About Us Version 2
-			6.7.2. Contact Us
-			6.7.3. FAQ's
-			...
--------------------------------------------------------------------*/
-
-/** 1. Import vendor **/
-/** 1.1. Vendor **/
-/** 1.1.1.	Google fonts **/
-@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto+Condensed:300,400,700|Lato:400,700,300,900|Oswald:400,300,700|Roboto:300,400,700,500|Open+Sans:300,400,600,700,800|Montserrat:400,700);
-/** 1.1.2.	Icon Fonts **/
-@import url("../sass/components/Vendor/font-awesome/font-awesome.min.css");
-@import url("../sass/components/Vendor/simple-line-icon/css/simple-line-icons.css");
-@import url("../sass/components/Vendor/pe-icon-7-stroke/css/pe-icon-7-stroke.css");
-@import url("../sass/components/Vendor/pe-icon-7-stroke/css/helper.css");
-/** 1.1.3. Vendor library **/
-/* EX: @import url('components/Vendor/owlcarousel/owlcarousel.css'); */
-/** 1.2. Bootstrap **/
-/** 1.3. Animation **/
-/* effect-v1 */
 .effect-v1 {
   background-color: #000;
   overflow: hidden;
@@ -13144,6 +13054,7 @@ nav.pagination a.next i {
 
 #header.header-v3 #topbar .float-left {
   margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 #header.header-v3 #topbar .float-left h3, #header.header-v3 #topbar .float-left p {
