Update css file

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,26 @@
   /* style for hover */
 }
 
+.effect-v1:before {
+  border: 1px solid #ffffff;
+  bottom: 20px;
+  content: "";
+  left: 20px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
+  -o-transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
+  transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
+  z-index: 1;
+}
+
 .effect-v1 img {
   -webkit-transform: scale(1.12);
   -ms-transform: scale(1.12);
