Update button stiles

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18464,6 +18464,7 @@ h2 {
 .link-to-page, .btn-success, .btn-primary{
   z-index: 99999;
   position: relative;
+  padding-top: 5px;
 }
 
 .login-form textarea, .login-form select {
