--- a/templates/portal/news_confirm_delete.html
+++ b/templates/portal/news_confirm_delete.html
@@ -4,13 +4,17 @@
   {% if request.user.is_authenticated %}
     <div class="confirm-delete">
       <h1>Delete news?</h1>
-        <form action="" method="post">
-          {% csrf_token %}
-          <input type="submit" value="Yes" class="btn btn-danger">
-        </form>
-      <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-success">
-        No
-      </a>
+        <div>
+            <form action="" method="post">
+              {% csrf_token %}
+              <input type="submit" value="Yes" class="btn btn-danger">
+            </form>
+        </div>
+        <div>
+          <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-success">
+            No
+          </a>
+        </div>
     </div>
   {% endif %}
 {% endblock %}
