--- a/templates/portal/news_confirm_delete.html
+++ b/templates/portal/news_confirm_delete.html
@@ -4,13 +4,13 @@
   {% if request.user.is_authenticated %}
     <div class="confirm-delete">
       <h1>Delete news?</h1>
-        <div>
+        <div class="delete-page">
             <form action="" method="post">
               {% csrf_token %}
               <input type="submit" value="Yes" class="btn btn-danger">
             </form>
         </div>
-        <div>
+        <div class="delete-page">
           <a href="{% url "portal:redactor-detail" pk=request.user.id %}" class="btn btn-success">
             No
           </a>
