--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto+Condensed:300,400,700|Lato:400,700,300,900|Oswald:400,300,700|Roboto:300,400,700,500|Open+Sans:300,400,600,700,800|Montserrat:400,700);
+
 .effect-v1 {
   background-color: #000;
   overflow: hidden;
